--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Happy Birthday Tanay</title>
+<title>Happy Birthday Jonali</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
@@ -26,13 +26,14 @@
 <div id="card-inside">
 <div class="wrap wishesFont">
     <center>
-      <p>Wishing you a very Happy Birthday Tanay! May god bless you.</p>
-      <p> You might be wondering, who is this girl who had sent me this virtual card! Let me take a moment to introduce myself. I am a techie just like you! I am one of the regular readers of your posts you add on LinkedIn or twitter. 
-        <p> Though, i never got a chance to meet you in person. But because of GS India Summit 2019. I know you! Being an emminent part of GS I was last year an organiser in the same event. You are my prime source of motivation to do good in tech. Thankyou 😊😊
+      <p>Wishing you a very Happy Birthday Jonali! May god bless you.</p>
+      <p> Happy Birthday to a special person who is bringing so much joy to my heart. I am thankful for every moment we spend together, and I wish our happiness never ends. 
+        <p> You make my life worth living. You bring smiles to my face, and your touch shows me how much you love me and care for me. You are my friend and my lover. Happy Birthday.
+            khodai happy thaka aur tumi lifet ji bisara sob pura hok💕. I will always by your side❤️ I LOVE YOU❤️BABY
        </p>
       </center>
 <p class="signed">With Best Wishes 
-    <br> Smile Gupta
+    <br> Nabajit Biswas
   </p>
   
 </div>
