--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>Wishing you a very Happy Birthday Jonali! May god bless you.</p>
       <p> Happy Birthday to a special person who is bringing so much joy to my heart. I am thankful for every moment we spend together, and I wish our happiness never ends. 
         <p> You make my life worth living. You bring smiles to my face, and your touch shows me how much you love me and care for me. You are my friend and my lover. Happy Birthday.
-            khodai happy thaka aur tumi lifet ji bisara sob pura hok💕. I will always by your side❤️ I LOVE YOU❤️BABY
+            khodai happy thaka aru tumi lifet ji bisara sob pura hok💕. I will always by your side❤️ I LOVE YOU❤️BABY
        </p>
       </center>
 <p class="signed">With Best Wishes 
