--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 <div id="card-front">
 <div class="wrap">
-<h1>Happy Birthday</h1>
+<h1>Happy Birthday Jonali </h1>
 <div class="cake_and_velas">
 <div class="velas">
 <div class="fuego"></div>
